# interactive-books

./: .env.example  .envrc.example  .gitattributes  .gitignore  AGENTS.md  README.md  devbox.json  package.json
.claude/: mcp.json  settings.json  (+1 more)
python/: .env.example  pyproject.toml
python/source/interactive_books/: main.py
python/source/interactive_books/app/: ask.py  chat.py  conversations.py  delete_book.py  embed.py  ingest.py  list_books.py  search.py  summarize.py
python/source/interactive_books/domain/: book.py  book_summary.py  chat.py  chat_event.py  chunk.py  chunk_data.py  conversation.py  embedding_vector.py  errors.py  page_content.py  prompt_message.py  protocols.py  search_result.py  section_summary.py  tool.py
python/source/interactive_books/infra/: retry.py  settings.py
python/tests/: conftest.py  fakes.py  test_smoke.py
python/tests/app/: test_ask.py  test_chat.py  test_conversations.py  test_delete_book.py  test_embed.py  test_ingest.py  test_ingest_embed_integration.py  test_list_books.py  test_search.py  test_spoiler_agent.py  test_spoiler_prevention_integration.py  test_summarize.py
python/tests/cli/: test_chat_command.py  test_embed_command.py  test_ingest_command.py  test_search_page_command.py  test_summarize_command.py
python/tests/domain/: test_book.py  test_book_summary.py  test_chat.py  test_chat_event.py  test_chunk.py  test_chunk_data.py  test_conversation.py  test_embedding_vector.py  test_errors.py  test_page_content.py  test_prompt_message.py  test_search_result.py  test_section_summary.py  test_tool.py
python/tests/helpers/: llm_judge.py
python/tests/infra/: test_book_repo.py  test_cascade.py  test_chunk_repo.py  test_database.py  test_retry.py  test_summary_repo.py
python/tests/infra/chunkers/: test_recursive_chunker.py
python/tests/infra/context/: test_full_history.py
python/tests/infra/embeddings/: test_openai_embedding.py
python/tests/infra/llm/: test_anthropic_chat.py  test_anthropic_chat_integration.py
python/tests/infra/parsers/: conftest.py  test_docx_parser.py  test_epub_parser.py  test_html_parser.py  test_markdown_parser.py  test_pdf_parser.py  test_txt_parser.py  test_url_parser.py
python/tests/infra/retrieval/: test_always_retrieve_strategy.py  test_tool_use_strategy.py
(+272 files in other folders)
