[project]
name = "interactive-books"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "typer",
    "pydantic-settings",
    "httpx",
]

[project.scripts]
cli = "interactive_books.main:app"

[dependency-groups]
dev = [
    "pytest",
    "ruff",
    "pyright",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.pyright]
pythonVersion = "3.13"
venvPath = "."
venv = ".venv"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["source/interactive_books"]
