[project]
name = "interactive-books"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "typer",
    "pydantic-settings",
    "httpx",
    "pymupdf",
    "openai",
    "anthropic",
    "sqlite-vec",
]

[project.scripts]
interactive-books = "interactive_books.main:app"

[dependency-groups]
dev = [
    "pytest",
    "ruff",
    "pyright",
]

[tool.pytest.ini_options]
addopts = ["--import-mode=importlib", "-m", "not integration"]
testpaths = ["tests"]
markers = [
    "integration: tests that call external APIs (require API keys)",
]
filterwarnings = [
    "ignore:builtin type Swig:DeprecationWarning",
]

[tool.pyright]
pythonVersion = "3.13"
venvPath = "."
venv = ".venv"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["source/interactive_books"]
